--- a/style.css
+++ b/style.css
@@ -16,8 +16,12 @@ html {
 
 a {
   color: rgb(31, 36, 193);
-  font-size: 20px;
+  font-size: 16px;
   text-decoration: none;
+}
+
+#social {
+  font-size: 20px;
 }
 
 #name {
